fix(KwForm): set kw-field-wrap to flexible when below kw-form-item

--- a/src/components/form/KwForm.scss
+++ b/src/components/form/KwForm.scss
@@ -42,6 +42,10 @@
         margin-left: 8px;
       }
     }
+
+    .kw-field-wrap {
+      flex: 1 0 1%;
+    }
   }
 }
 
